# MIPT_navigator

./: .gitignore  CMakeLists.txt  Character.cpp  Character.h  Class.cpp  Class.h  Counting_Points.cpp  Counting_Points.h  Exam.cpp  Exam.h  Fucker.cpp  Fucker.h  Game_Menu.cpp  Game_Menu.h  Player.cpp  Player.h  README.md  TextBar.cpp  TextBar.h  faki.cpp  faki.h  fbmf.cpp  fbmf.h  fefm.cpp  fefm.h  fefm.txt  fpmi.cpp  fpmi.h  frkt.cpp  frkt.h  frkt.txt  inbicst.cpp  inbicst.h  inbicst.txt  instruction.txt  lfi.cpp  lfi.h  main.cpp  map.cpp  map.h  (+8 more)
Budget/: bio_budget.txt  chem_budget.txt  inf_budget.txt  phys_budget.txt
Contract/: bio_contract.txt  chem_contract.txt  inf_contract.txt  phys_contract.txt
texts/: faki.txt  fbmf.txt  fefm.txt  fpmi.txt  frkt.txt  inbicst.txt  lfi.txt
